# tikka

./: .gitignore  Cargo.toml  Rocket.toml
data/: index.html  index.html.tera
src/: main.rs
src/endpoints/: submit.rs
src/routes/: file.rs  mod.rs  root.rs  submit.rs
